# practicles

./: .gitignore  CSharpNotes.txt  README.md
AI & ChatGTP/: AI_Related_Notes.txt  chatGPT_Notes.txt
Android/app/: build.gradle
Avalonia/: Avalonia_Notes.txt
Avalonia/AvWeb/: App.axaml  App.axaml.cs  AvWeb.sln
Avalonia/AvWeb.Browser/: AvWeb.Browser.csproj  Program.cs
Avalonia/AvWeb.Desktop/: AvWeb.Desktop.csproj  Program.cs
Avalonia/Avalonia.CommunityToolkit/: Avalonia.CommunityToolkit.sln
Avalonia/Avalonia.Practicles/: Avalonia.Practicles.sln
Docker/Postgres/: docker-compose.yml  docker-compose.yml2
FunStuff/: FunStuffNotes.txt  ohmyposhv3-v2.json
Hadoop/: hadoop_notes.txt
Java/: javTemplate_1.code-snippets  java_notes.txt
Java/teaching/: prog_1.java  prog_2.java
LLM/: LLM Notes.txt
OlympiadAndJEE_prep/: Assignment_1_2023_07_08.docx  Number System.docx  olympiad_compettive_coding.txt
Rust/: RustNotes.txt
Rust/factorial_calculator/: Cargo.toml
Rust/rust_ui_test/: package-lock.json  package.json
Rust/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
Rust/wgpu_book/: Cargo.toml
Rust/wgpu_book/examples/ch01/: test01.rs  test02.rs
Rust/wgpu_book/examples/ch02/: common.rs  first_triangle.rs  first_triangle.wgsl
Security/SEEDLabs/: SEEDLabNotes.txt
UNO/: UNO_NOTES.txt
competitive_programming/: olympiad_compettive_coding.txt
hype-v or virtualbox/: install-macos.txt  virtual_machine_notes.txt
mysql/: mysql_notes.txt  sql_query.sql
postgres/: postgres_notes.txt
typingPractice/: typing day 2.docx  typing day 3.docx
(+256 files in other folders)
